--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ org.gradle.caching=true
 kotlinVersion=2.0.20
 kotlinLanguageVersion=2.0
 antlrVersion=4.11.1
-kolasuVersion=1.5.73-SNAPSHOT
+kolasuVersion=1.5.73
 serializationVersion=1.0.1
